# webots_ros2_spot_2

./: README.md
a1_sdk/: CMakeLists.txt  package.xml
a1_sdk/include/Gait/: GaitGenerator.h  GaitWave.h
a1_sdk/include/common/: enumClass.h  mathTools.h  mathTypes.h  unitreeLeg.h
a1_sdk/include/control/: BalanceCtrl.h
a1_sdk/include/message/: LowlevelCmd.h  LowlevelState.h
a1_sdk/src/: robot_balance.cpp  robot_joint.cpp  robot_swingtest.cpp  robot_trotting.cpp
a1_sdk/src/Gait/: GaitGenerator.cpp  GaitWave.cpp
a1_sdk/src/common/: unitreeRobot.cpp
a1_sdk/src/control/: BalanceCtrl.cpp
a1_sdk/src/quadProgpp/: Array.cc  QuadProg++.cc
spot_msgs/: CMakeLists.txt  README.md  package.xml
spot_msgs/action/: PeakAndDetectObject.action  Stack.action
spot_msgs/msg/: GaitInput.msg  Legs.msg
spot_msgs/srv/: BlockPose.srv  SpotHeight.srv  SpotMotion.srv
webots_spot/: package.xml  setup.py
webots_spot/map/: map.pgm  map.yaml
webots_spot/params/: nav2_params.yaml
webots_spot/webots_spot/: gripper_client.py  spot_driver.py  task4_3.py
webots_spot/webots_spot/pickandplace/: moveit_fk_action.py  moveit_ik.py  nav2_action.py
